style.css
/* type selectors */
body {
    min-height: 100vh;
    margin: 0;
    padding: 0;
    font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: #F9FAF8;
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}

button {
    color: #F9FAF8;
    background-color: #3882F6;
    width: 72px;
    height: 36px;
    border-radius: 8px;
}

ul {
    display: flex;
    margin: 0;
    padding: 0;
    list-style-type: none;
    gap: 16px;
}

a {
    text-decoration: none;width: 8;
}
/* shared */

.info-header,
.info-text,
.quote-text,
.quote-speaker {
    color: #1F2937;
}

.hero,
.footer {
    background-color: #1F2937;
}

.hero-secondary,
a {
    font-size: 18px;
    color: #E5E7EB;
}

/* hero/header section classes */

.hero {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1;
    padding: 16px;
    
}

.header {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    
    
    
}

.hero-logo {
    font-size: 24px;
    color: #F9FAF8;
}

.hero-content {
    display: flex;
    justify-content: space-evenly;
    
}

.hero-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 400px;
    gap: 8px;
}

.hero-main-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}

.hero-image {
    width: 400px;
    height: auto;
}

/* information section classes */

.information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: 1;
}

.info-header {
    font-size: 36px;
    font-weight: 900;
}


.info-text {
    font-size: 18px;
    
}

.info-container {
    display: flex;
}

.info-item {
    max-width: 200px;
}

/* quotation section classes */

.quotation {
    background: #E5E7EB;
    display: flex;
    flex-direction: column;
    flex: 1;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}
/* justify-content: space-between; */
.quote-speaker {
    font-size: 18px;
    font-weight: 700;
}

/* action-call section classes */
.action-call {
    background-color: #3882F6;
    display: flex;
    justify-content: space-around;
    flex: 1;
}

.action-call-left {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.action-call-button {
    border-color: white;
}

/* footer section classes */
.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    
}

.footer-text {
    color: #E5E7EB;
    font-size: 12px;
}

